# mcgp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  entry.md  main.cpp  main3d.cpp  mainhelm.cpp
include/: WoS.h  WoS2d.h  green.h  helmholtz.h  mesh_centroid_bound.h  mls.h  sdf_bc.h  walk_on_spheres.h
src/: WoS.cpp  WoS2d.cpp  green.cpp  helmholtz.cpp  mls.cpp  sdf_bc.cpp
tutorials/: CMakeLists.txt  helm.cpp  lap3d_adaptive.cpp  lap3d_mesh.cpp  lap3d_mesh_fancy.cpp  lap3d_mesh_simple.cpp  lap3d_simple.cpp  poi2d.cpp  poi3d_simple.cpp
